23 Dec 2001 OPTION_LPP_RESTRICT - Jan Jaeger
23 Dec 2001 Selective ArchMode build options - Jan Jaeger
18 Dec 2001 Make sure PC, PR, PT state switch when pending PER - Paul Leisy
18 Dec 2001 Fix up ILC for PR when PER interrupt - Paul Leisy
18 Dec 2001 Zero STD ID part of PER code for STURA - Paul Leisy
18 Dec 2001 For SSM, LPSW, purge Herc Op cache when PER bit on - Paul Leisy
18 Dec 2001 Move PERAID update to store accesses only - Paul Leisy
18 Dec 2001 Fix trace entry for BSG - Paul Leisy
18 Dec 2001 Add Branch PER check to BCT - Paul Leisy
18 Dec 2001 Add Store PER check to Stack accesses - Paul Leisy
18 Dec 2001 Check odd IA before IFetch PER - Paul Leisy
16 Dec 2001 Do not process PER in native BC mode - Jan Jaeger
16 Dec 2001 Correct PER for S/370 under SIE - Jan Jaeger
16 Dec 2001 Add missing obtain intlock to sie.c - Greg Smith
16 Dec 2001 Add channel set switching feature - Jan Jaeger
16 Dec 2001 Complete MP for S/370 - Jan Jaeger
14 Dec 2001 Fix BSM instruction for z/OS - Greg Smith
12 Dec 2001 Correct SIE intercept with concurrent PER indication - Jan Jaeger
09 Dec 2001 SIE PER enhancements - Jan Jaeger
06 Dec 2001 Basic PER implemention - Jan Jaeger
05 Dec 2001 Corrected ref and change bits on loadtext - Jan Jaeger
04 Dec 2001 Rewrite of trace including full 64 bit support - Jan Jaeger
28 Nov 2001 Reset device status in device_reset() for ckd dev - Jan Jaeger
28 Nov 2001 Alignment fixes for SPARC64 - Matt Zimmerman
28 Nov 2001 Bypass syncio if track overflow or data chaining - Valery
            Pogonchenko
28 Nov 2001 Remove SIGHUP usage - Jan Jaeger
28 Nov 2001 Fix interval timer - Jan Jaeger
28 Nov 2001 Fix unintended exit when CPU 0 is deconfigured - Matt Zimmerman
22 Nov 2001 Cancel Subchannel (XSCH) function and instruction - Jan Jaeger
21 Nov 2001 OPTION_SYNCIO *is* compatible with OPTION_FISHIO - Greg Smith
18 Nov 2001 Synchronous I/O - Greg Smith
18 Nov 2001 Add OPTION_IODELAY to bypass linux/zseries bug - Jan Jaeger