@@ -1,3 +1,4 @@
+30 Dec 2001 Fix for cckd and big-endian - Greg Smith
 23 Dec 2001 OPTION_LPP_RESTRICT - Jan Jaeger
 23 Dec 2001 Selective ArchMode build options - Jan Jaeger
 18 Dec 2001 Make sure PC, PR, PT state switch when pending PER - Paul Leisy
